--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,15 +16,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-		<service
-			android:name="com.example.vano.workoutplanreminder.MyService"
-			android:enabled="true"
-			android:exported="true" >
-		</service>
-		<receiver
-			android:name="com.example.vano.workoutplanreminder.MyBroadcastReceiver"
-			android:exported="false" >
-		</receiver>
+
+        <service
+            android:name="com.example.vano.workoutplanreminder.MyService"
+            android:enabled="true"
+            android:exported="true" >
+        </service>
+
+        <receiver
+            android:name="com.example.vano.workoutplanreminder.MyBroadcastReceiver"
+            android:exported="false" >
+        </receiver>
+
+        <activity
+            android:name="com.example.vano.workoutplanreminder.ListActivity"
+            android:label="@string/title_activity_list" >
+        </activity>
     </application>
 
 </manifest>
