--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,25 +1,28 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 20
-    buildToolsVersion "20.0.0"
-
-    defaultConfig {
-        applicationId "com.example.vano.workoutplanreminder"
-        minSdkVersion 19
-        targetSdkVersion 20
-        versionCode 1
-        versionName "1.0"
-    }
-    buildTypes {
-        release {
-            runProguard false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
+	compileSdkVersion 21
+	buildToolsVersion "21.0.2"
+	defaultConfig {
+		applicationId "com.example.vano.workoutplanreminder"
+		minSdkVersion 21
+		targetSdkVersion 21
+		versionCode 1
+		versionName "1.0"
+	}
+	buildTypes {
+		release {
+			minifyEnabled false
+			proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+		}
+	}
+	productFlavors {
+	}
 }
 
 dependencies {
 	compile fileTree(dir: 'libs', include: ['*.jar'])
-	compile 'com.android.support:support-v4:20.0.0'
+	compile 'com.android.support:support-v4:21.0.2'
+	compile 'com.shamanland:fab:0.0.6'
+	compile 'com.android.support:palette-v7:21.0.+'
 }
